Refazendo o modelo do site

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h3 class="titulos">Curiosidade:</h3>
                 <p class="texto">"Os buracos negros não “sugam” tudo que está a sua volta, no entanto, o seu campo gravitacional pode prender estrelas e planetas longínquos em órbitas espirais. Para que algo seja de fato “sugado” para o interior de um buraco negro, sem qualquer chance de fuga, é necessário que se estabeleça uma distância mínima ao seu centro, chamada de horizonte de eventos. A essa distância, a velocidade de escape, ou seja, a mínima velocidade para se escapar de um buraco negro, é maior que a própria velocidade da luz."</p>
                 <img src="imagens/buraconegropqn.webp" alt="buraco negro" class="imagem">
-                <p class="textoveja">Veja abaixo como é o som de um buraco negro segunda a Nasa:</p>
+                <p class="texto">Veja abaixo como é o som de um buraco negro segunda a Nasa:</p>
                 <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/UBkSJyR6ax4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
@@ -35,7 +35,7 @@
                 <h2 class="titulos">SUPER NOVA</h2>
                 <p class="texto">Quando uma estrela gigante, com uma massa de pelo menos 10 vezes a massa do Sol, chega ao fim de sua vida produz-se uma explosão a que se dá o nome de supernova. A supernova pode atingir um brilho de muitos milhões de vezes o brilho da estrela antes da explosão. O brilho é de tal forma intenso que pode ser comparável ao brilho de uma galáxia inteira. É uma explosão verdadeiramente notável.</p>
                 <img src="imagens/supernovapqn.jpg" alt="supernova" class="imagem">
-                <p class="textoveja">Veja abaixo a explosão de uma Supernova:</p>
+                <p class="texto">Veja abaixo a explosão de uma Supernova:</p>
                 <div class="video">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/aysiMbgml5g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen ></iframe>
                 </div>
