--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <p>Conheça mais sobre alguns eventos astronômicos impressionantes.</p>
     </header>
     <nav>
-        <a href="#">Saiba mais</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale conosco</a>
+        <input type="button" value="Saiba mais">
+        <input type="button" value="Curiosidades">
+        <input type="button" value="Fale Conosco">
     </nav>
     <main>
         <section>
